--- a/UPGRADE.asciidoc
+++ b/UPGRADE.asciidoc
@@ -46,8 +46,8 @@ To do so, run the following commands:
   service packetfence stop
   service packetfence-config stop
 
-For Red Hat-based systems
-^^^^^^^^^^^^^^^^^^^^^^^^^
+RHEL / CentOS based systems
+^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
 Run the following command to update PacketFence:
 
@@ -57,20 +57,45 @@ Since PacketFence heavily relies on Fingerbank, it is recommended to make sure r
 
   yum update fingerbank --enablerepo=packetfence
 
-PacketFence should now be upgraded.  However, there may be extra steps required depending on the version you are upgrading from.  Please review the following notes about upgrading from an older release.
+PacketFence should now be upgraded. However, there may be extra steps required depending on the version you are upgrading from. Please review the following notes about upgrading from an older release.
 
-Please note that the sections below are cumulative. That is to say, if you are upgrading from version 5.3 to version 6.0 you must apply in order all changes in between the two versions, including database schema changes.
+Debian based systems
+^^^^^^^^^^^^^^^^^^^^
+
+Run the following command to update PacketFence:
+
+  apt update
+
+  apt install packetfence
+
+Since PacketFence heavily relies on Fingerbank, it is recommended to make sure running the latest version:
+
+  apt update
+
+  apt install fingerbank
+
+PacketFence should now be upgraded. However, there may be extra steps required depending on the version you are upgrading from. Please review the following notes about upgrading from an older release.
+
+NOTE: Upgrade notes for a given upgrade path are cumulative. That is to say, if you are upgrading from version 5.3 to version 6.0 you must apply in order all changes in between the two versions, including database schema changes.
 
 You should take care to review any changes to configuration files and merge them if required. 
 To find out which configuration files have changed run this command:
 
-RHEL and CentOS:
+
+RHEL / CentOS based systems
+^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
   find /usr/local/pf -name \*.rpmnew
 
 The list of files returned are the new versions shipped with PacketFence.
 Compare them to your existing version and see if there are changes that should be merged into your existing configuration.
 Then, once you are done make sure to delete these files so that there is no confusion the next time you upgrade PacketFence.
+
+Debian based systems
+^^^^^^^^^^^^^^^^^^^^
+
+Debian installation system should have interactively ask for existing modified files.
+
 
 Once the additionnal steps are completed, restart packetfence-config and packetfence
 
