--- a/UPGRADE.asciidoc
+++ b/UPGRADE.asciidoc
@@ -107,6 +107,10 @@ Once the additionnal steps are completed, restart packetfence-config and packetf
   service packetfence-config restart
   /usr/local/pf/bin/pfcmd service pf restart
 
+Don't forget to edit the `/usr/local/pf/conf/currently-at` file to match the newly updated version
+
+  cat /usr/local/pf/conf/pf-release > /usr/local/pf/conf/currently-at
+
 Upgrading from a version prior to 7.0.0
 ---------------------------------------
 
