--- a/UPGRADE.asciidoc
+++ b/UPGRADE.asciidoc
@@ -175,10 +175,12 @@ To upgrade the database schema, run the following command:
 
   mysql -u root -p pf -v < /usr/local/pf/db/upgrade-6.5.0-7.0.0.sql
 
-MariaDB configuration
-^^^^^^^^^^^^^^^^^^^^^
+Systemd integration
+^^^^^^^^^^^^^^^^^^^
 
-If you are hosting the MySQL/MariaDB service on your PacketFence servers (it is by default), you should now manage the service via `packetfence-mariadb.service` instead of `mariadb.service`. 
+All PacketFence services are managed individually via systemd unit files instead of one unit file (`packetfence.service`). When you updated the PacketFence package, it already set the system target to `packetfence.target`.
+
+If you are hosting the MySQL/MariaDB service on your PacketFence servers (it is by default), you should now manage the service via `packetfence-mariadb.service` instead of `mariadb.service`.
 The changes in the server startup will be done automatically by the packaging.
 
 Admin roles configuration
