--- a/UPGRADE.asciidoc
+++ b/UPGRADE.asciidoc
@@ -194,7 +194,7 @@ Given the portal profiles have now been renamed to connection profiles, you need
 PacketFence configuration
 ^^^^^^^^^^^^^^^^^^^^^^^^^
 
-Multiple parameters inside pf.conf have been renamed for better clarity. Execute the following in order to migrate the parameters.
+Multiple parameters inside `pf.conf` have been renamed for better clarity. Execute the following in order to migrate the parameters.
 
   /usr/local/pf/addons/upgrade/to-7.0-pf-conf-changes.pl
 
@@ -203,19 +203,17 @@ Maintenance configuration
 
 Maintenance related configuration for pfmon has been moved to a dedicated configuration file (`/usr/local/pf/conf/pfmon.conf`).
 
-In order to migrate your settings from pf.conf to pfmon.conf, run the following script:
+In order to migrate your settings from `pf.conf` to `pfmon.conf`, run the following script:
 
   /usr/local/pf/addons/upgrade/to-7.0-pf.conf-to-pfmon.conf.pl
-
-Once completed, update the file /usr/local/pf/conf/currently-at to match the new release number (PacketFence X.Y.Z).
 
 DHCP filters configuration
 ^^^^^^^^^^^^^^^^^^^^^^^^^^
 
 Minor changes were made to the DHCP filters configuration (`/usr/local/pf/conf/dhcp_filters.conf`).
 
-First, the computer_name attribute was renamed to computername to be consistent with the rest of the application.
-Then, the DhcpFingerbank scope was changed to Fingebank
+First, the `computer_name` attribute was renamed to `computername` to be consistent with the rest of the application.
+Then, the `DhcpFingerbank` scope was changed to `Fingerbank`
 
 In order to rename those in an automated way:
 
@@ -226,16 +224,16 @@ In order to rename those in an automated way:
 Roles configuration
 ^^^^^^^^^^^^^^^^^^^
 
-The source of truth for roles is now in a configuration file instead of being in the database. In order to pull the existing roles from your database into the configuration file, execute the following command:
+The source of truth for roles is now in a configuration file (`/usr/local/pf/conf/roles.conf`) instead of being in the database. In order to pull the existing roles from your database into the configuration file, execute the following command:
 
   /usr/local/pf/addons/upgrade/to-7.0-roles-conf.pl
 
-NOTE: The roles still exist in the database like before (node_category table), but their source of truth is now in the configuration file. Should you remove a role manually from roles.conf, it will *not* be removed from the database unless you manually go delete it from the database.
+NOTE: The roles still exist in the database like before (node_category table), but their source of truth is now in the configuration file. Should you remove a role manually from `roles.conf`, it will *not* be removed from the database unless you manually go delete it from the database.
 
-Pfdetect configuration
+pfdetect configuration
 ^^^^^^^^^^^^^^^^^^^^^^
 
-New parameters have been introduced in conf/pfdetect.conf. Run the following script to migrate your configuration.
+New parameters have been introduced in `conf/pfdetect.conf`. Run the following script to migrate your configuration.
 
   /usr/local/pf/addons/upgrade/to-7.0-pfdetect-conf.pl
 
