Removed OCSP Stapling reference

--- a/NEWS.asciidoc
+++ b/NEWS.asciidoc
@@ -54,9 +54,8 @@ Enhancements
  * Added option to fetch users one by one in the NTLM cache instead of all together (PR#2093)
  * New parallel testing infrastructure (PR#2094)
  * Roles are now stored in a configuration file for easier backup and management (PR#2097)
- * Tightened up HAproxy's SSL termination security (#893/#410/#411/#412/PR#2103)
- * Tightened up Apache's encryption security by requiring TLS v1.2 support only and restricted ciphersuites (#893/#410/#411/#412/PR#2103)
- * OCSP Stapling is proposed to clients through Apache (#893/#410/#411/#412/PR#2103)
+ * Tightened up HAproxy's SSL termination security (#893/#410/#411/#412)
+ * Tightened up Apache's encryption security by requiring TLS v1.2 support only and restricted ciphersuites (#893/#410/#411/#412)
  * Clickjacking attack prevention enforcement for recent browsers (PR#2111)
  * Cross-site scripting (XSS) filtering is now requested from your browser (PR#2114)
  * Dell N2000 series support (#675/PR#2115)
