--- a/UPGRADE.asciidoc
+++ b/UPGRADE.asciidoc
@@ -57,6 +57,8 @@ Since PacketFence heavily relies on Fingerbank, it is recommended to make sure y
 
 PacketFence and Fingerbank should now be upgraded. However, there may be extra steps required depending on the version you are upgrading from. Please review the following notes about upgrading from an older release.
 
+NOTE: Upgrade notes for a given upgrade path are cumulative. That is to say, if you are upgrading from version 5.3 to version 6.0 you must apply in order all changes in between the two versions, including database schema changes.
+
 Debian based systems
 ^^^^^^^^^^^^^^^^^^^^
 
@@ -72,9 +74,9 @@ Since PacketFence heavily relies on Fingerbank, it is recommended to make sure y
 
 PacketFence and Fingerbank should now be upgraded. However, there may be extra steps required depending on the version you are upgrading from. Please review the following notes about upgrading from an older release.
 
-'''
-
 NOTE: Upgrade notes for a given upgrade path are cumulative. That is to say, if you are upgrading from version 5.3 to version 6.0 you must apply in order all changes in between the two versions, including database schema changes.
+
+'''
 
 You should take care to review any changes to configuration files and merge them if required. 
 To find out which configuration files have changed run this command:
